--- a/roles/nginx/templates/wordpress_old.conf
+++ b/roles/nginx/templates/wordpress_old.conf
@@ -1,6 +1,6 @@
 server {
-        listen 80;
-        listen [::]:80;
+        listen {{nginx_listen_port}};
+        listen [::]:{{nginx_listen_port}};
 
         root /var/www/wordpress;
 
@@ -13,7 +13,8 @@ server {
         }
 
         location ~ \.php$ {
-	        include snippets/fastcgi-php.conf;
-        	fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
         }
 }
+~     
