--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory      = /opt/ansible/inventory/aws_ec2.yaml
+interpreter_python = /usr/bin/python3
 
 [inventory]
 enable_plugins = aws_ec2
