Fix dynamic env

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory      = /opt/ansible/inventory/aws_ec2.yaml
+inventory      = aws_ec2.yaml
 interpreter_python = /usr/bin/python3
 
 [inventory]
